Alterações na pagina quem somos

--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,20 +1,38 @@
 ---
-slug: mdx-blog-post
-title: MDX Blog Post
-authors: [slorber]
-tags: [docusaurus]
+slug: Localizão
+title: Localizão
 ---
 
-Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
+# Nossa Localização
 
-:::tip
+Bem-vindo à Oficina!
 
-Use the power of React to create interactive blog posts.
+Estamos localizados em uma área acessível para atender às necessidades dos nossos clientes em Portugal. Aqui estão os detalhes da nossa localização:
 
-```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
-```
+## Endereço
 
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+Rua do Reparo, 123  
+faro, faro
+Código Postal: 1234-567  
 
-:::
+## Contato
+
+- **Telefone:** +351 123 456 789
+- **E-mail:** info@oficina.pt
+
+## Horário de Funcionamento
+
+**Segunda a Sexta:**  
+Aberto das 9h00 às 18h00
+
+**Sábado:**  
+Aberto das 9h00 às 13h00
+
+## Como Nos Encontrar
+
+Estamos convenientemente localizados perto da Praça Central da Cidade, próximo ao Mercado Municipal. Ao chegar à Praça, siga pela Rua Comércio até encontrar nossa oficina do lado direito.
+Estamos ansiosos para recebê-lo em nossa oficina e proporcionar a você um serviço automotivo excepcional em solo português. Se precisar de assistência para encontrar nossa localização, não hesite em nos contatar.
+
+Agradecemos a confiança e esperamos vê-lo em breve na Oficina!
+
+*Equipe Oficina*
